Fixed the sub footer so it didn't overflow

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -141,13 +141,14 @@
 
 //- Sub Footer
 #sub-footer {
-    padding-top: 10px;
     background: #2A3A4C;
-    color: #7D7D7D;
+    width: 100%;
     text-align: center;
-    font-size: 10px;
     p {
-        margin-bottom: 10px;
+        padding: 10px 0;
+        margin: 0;
+        font-size: 10px;
+        color: #7D7D7D;
     }
 }
 
